[tool.poetry]
name = "calculator"
version = "1.0.0"
description = "Calculator"
authors = ["Christopher Caputo <christopher.caputo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
